[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "firewxpy"
version = "1.6"
authors = [
  { name="Eric J Drewitz, USDA/USFS"},
]
description = "Weather Analysis and Forecasting For Fire Weather"
readme = "README.md"
keywords = ["meteorology", "science", "data-analysis", "weather", "forecasting"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
	"matplotlib>=3.7",
 	"protobuf>=3.20.3",
	"metpy>=1.5.1",
	"netcdf4>=1.7.1",
	"numpy>=1.24",
	"pandas>=2.2",
	"siphon>=0.10.0",
 	"xarray>=2023.1.0",
 	"pysolar>=0.11",
   	"cfgrib>=0.9.10.4",
    	"cartopy>=0.21.0",
      	"pytz>=2024.1"
]

