[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "firewxpy"
version = "2.0"
authors = [
  { name="Eric J Drewitz"},
]
description = "Weather Analysis and Forecasting For Fire Weather"
readme = "README.md"
keywords = ["meteorology", "science", "data-analysis", "weather", "forecasting"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
	"matplotlib>=3.7",
 	"wxdata>=1.2.7",
	"xeofs>=3.0.4",
	"geopandas>=1.1.0"
        
]

