[project]
name = "firewxpy"
version = "2.0"
description = "A Python package that makes various types of real-time weather graphics with an emphasis on fire weather. These graphics are designed for automation in an operational setting."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE*"]
authors = [
    { name = "Eric J. Drewitz" },
]
keywords = ["meteorology", "atmospheric sciences"]
classifiers = [
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Operating System :: OS Independent",
]

dependencies = [
  	"matplotlib>=3.7",
 	"wxdata>=2.0.1",
    "shapeography>=1.2", 
]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in the src directory

[project.urls]
Documentation = "https://github.com/edrewitz/firewxpy#documentation"
Repository = "https://github.com/edrewitz/firewxpy"
